--- a/src/main/resources/doc/mystyle.sty
+++ b/src/main/resources/doc/mystyle.sty
@@ -1,7 +1,7 @@
 %
 % mystyle.sty
 %
-% Additional style definitions for CAWA SUM (D-9)
+% Additional style definitions for S3 SNOW SUM (D2.3)
 %
 \let\oldsection\section
 \renewcommand\section{\clearpage\oldsection}
@@ -10,6 +10,6 @@
 \pagestyle{fancy}
 \fancyhf{}
 \rhead{Software User Manual}
-\lhead{CAWA D-9}
+\lhead{S3 SNOW D2.3}
 \cfoot{\thepage}
 
