--- a/src/main/resources/doc/mystyle.sty
+++ b/src/main/resources/doc/mystyle.sty
@@ -1,5 +1,5 @@
 %
-% mystyle.sty
+% s3snowstyle.sty
 %
 % Additional style definitions for S3 SNOW SUM (D2.3)
 %
@@ -13,3 +13,31 @@
 \lhead{S3 SNOW D2.3}
 \cfoot{\thepage}
 
+\renewcommand{\maketitle}{%
+  \noindent\rule{\textwidth}{1pt}\par
+    \begingroup % for PDF information dictionary
+       \def\endgraf{ }\def\and{\& }%
+       \pdfstringdefDisableCommands{\def\\{, }}% overwrite hyperref setup
+       \hypersetup{pdfauthor={\@author}, pdftitle={\@title}}%
+    \endgroup
+  \begin{center}
+    \sphinxlogo
+    \vspace{25pt}
+    \py@HeaderFamily
+    {\huge \@title}\par
+    \vspace{25pt}
+    {\Large
+      \begin{tabular}[t]{c}
+        \@author
+      \end{tabular}}\par
+    \vspace{25pt}
+    {\large \py@release \releaseinfo}\par
+    \vspace{25pt}
+    \@date \par
+    \py@authoraddress \par
+  \end{center}
+  \@thanks
+  \setcounter{footnote}{0}
+  \let\thanks\relax\let\maketitle\relax
+  %\gdef\@thanks{}\gdef\@author{}\gdef\@title{}
+}
