--- a/src/main/resources/doc/mystyle.sty
+++ b/src/main/resources/doc/mystyle.sty
@@ -41,3 +41,15 @@
   \let\thanks\relax\let\maketitle\relax
   %\gdef\@thanks{}\gdef\@author{}\gdef\@title{}
 }
+
+
+\definecolor{ocre}{RGB}{243,102,25}
+\usepackage{caption}
+%\usepackage[font={color=ocre,bf},figurename=Fig.,labelfont={it}]{caption}
+\usepackage[font={color=black,it},figurename=Figure,labelfont={color=blue,bf}]{caption}
+
+%\renewcommand{\thefigure}{\textcolor{blue}{\bfseries\itshape\arabic{figure}}}
+%\renewcommand{\figurename}{\textcolor{ocre}{\bfseries\itshape Figure}}
+%\renewcommand{\thetable}{\textcolor{ocre}{\bfseries\itshape\arabic{table}}}
+%\renewcommand{\tablename}{\textcolor{ocre}{\bfseries\itshape Table}}
+
