--- a/src/main/resources/doc/mystyle.sty
+++ b/src/main/resources/doc/mystyle.sty
@@ -46,7 +46,8 @@
 \definecolor{ocre}{RGB}{243,102,25}
 \usepackage{caption}
 %\usepackage[font={color=ocre,bf},figurename=Fig.,labelfont={it}]{caption}
-\usepackage[font={color=black,it},figurename=Figure,labelfont={color=blue,bf}]{caption}
+%\usepackage[font={color=black,it},figurename=Figure,labelfont={color=blue,bf}]{caption}
+\usepackage[indention=2cm,font={color=black,it},labelfont={color=blue,bf}]{caption}
 
 %\renewcommand{\thefigure}{\textcolor{blue}{\bfseries\itshape\arabic{figure}}}
 %\renewcommand{\figurename}{\textcolor{ocre}{\bfseries\itshape Figure}}
