implemented new algo for PPA requested by AK, switched to Simpson integration in BBA; updated SUM; set version to 2.0.11-SNAPSHOT

--- a/src/main/resources/doc/mystyle.sty
+++ b/src/main/resources/doc/mystyle.sty
@@ -27,8 +27,13 @@
     {\huge \@title}\par
     \vspace{25pt}
     {\Large
+      %\begin{tabular}[t]{c}
+      %  \@author
+      %\end{tabular}}\par
       \begin{tabular}[t]{c}
-        \@author
+        % hardcoded here - TODO: learn how to configure this
+        \textbf{{O. Danne, C. Brockmann - Brockmann Consult GmbH}} \\[0.5cm]
+        \textbf{{A. Kokhanovsky - VITROCISET Belgium SPRL}} \\
       \end{tabular}}\par
     \vspace{25pt}
     {\large \py@release \releaseinfo}\par
