SUM update to version 1.2

--- a/src/main/resources/doc/mystyle.sty
+++ b/src/main/resources/doc/mystyle.sty
@@ -31,9 +31,9 @@
       %  \@author
       %\end{tabular}}\par
       \begin{tabular}[t]{c}
-        % hardcoded here - TODO: learn how to configure this
-        \textbf{{O. Danne, C. Brockmann - Brockmann Consult GmbH}} \\[0.5cm]
-        \textbf{{A. Kokhanovsky - VITROCISET Belgium SPRL}} \\
+        % hardcoded here - TODO: learn how to configure this via conf.py
+        \textbf{{O. Danne, C. Brockmann, A. Kokhanovsky}} \\[0.5cm]
+        \textbf{{Brockmann Consult GmbH}} \\
       \end{tabular}}\par
     \vspace{25pt}
     {\large \py@release \releaseinfo}\par
