finished SUM update wrt SICE processor

--- a/src/main/resources/doc/mystyle.sty
+++ b/src/main/resources/doc/mystyle.sty
@@ -32,6 +32,7 @@
       %\end{tabular}}\par
       \begin{tabular}[t]{c}
         % hardcoded here - TODO: learn how to configure this via conf.py
+        \textbf{{Software User Manual}} \\[2.0cm]
         \textbf{{O. Danne, C. Brockmann, A. Kokhanovsky}} \\[0.5cm]
         \textbf{{Brockmann Consult GmbH}} \\
       \end{tabular}}\par
